--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>PrelaunchPage</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Angular Prelaunch Fun</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <meta name="Description" content="An epic app coming soon." />
+
+    <meta property="og:site_name" content="Angular Prelaunch" />
+    <meta
+      property="og:url"
+      content="https://isnt-saimon24-awesome.netlify.app/"
+    />
+    <meta property="og:description" content="An epic app coming soon." />
+    <meta
+      property="og:image"
+      content="https://isnt-saimon24-awesome.netlify.app/assets/meta.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://isnt-saimon24-awesome.netlify.app/assets/meta.png"
+    />
+    <meta name="twitter:text:title" content="Angular Prelaunch" />
+    <meta
+      name="twitter:image"
+      content="https://isnt-saimon24-awesome.netlify.app/assets/meta.png"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
